Add structure for page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Admin Dashboard</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="sidebar"></div>
+        <div class="header"></div>
+        <div class="content"></div>
+        <div class="rightbar"></div>
+    </div>
 </body>
 </html>
