Add contents for sidebar

--- a/index.html
+++ b/index.html
@@ -8,7 +8,48 @@
 </head>
 <body>
     <div class="container">
-        <div class="sidebar"></div>
+        <div class="sidebar">
+            <a class="name">
+                <img src="" alt="logo">
+                <p>Dashboard</p>
+            </a>
+            <a class="home">
+                <img src="" alt="home Logo">
+                <p>Home</p>
+            </a>
+            <a class="profile">
+                <img src="" alt="profile Logo">
+                <p>Profile</p>
+            </a>
+            <a class="msgs">
+                <img src="" alt="msg Logo">
+                <p>Messages</p>
+            </a>
+            <a class="history">
+                <img src="" alt="history Logo">
+                <p>History</p>
+            </a>
+            <a class="task">
+                <img src="" alt="task Logo">
+                <p>Tasks</p>
+            </a>
+            <a class="comm">
+                <img src="" alt="comm logo">
+                <p>Communities</p>
+            </a>
+            <a class="setting">
+                <img src="" alt="set logo">
+                <p>Settings</p>
+            </a>
+            <a class="support">
+                <img src="" alt="support logo">
+                <p>Support</p>
+            </a>
+            <a class="privacy">
+                <img src="" alt="privacy logo">
+                <p>Privacy</p>
+            </a>
+        </div>
         <div class="header"></div>
         <div class="content"></div>
         <div class="rightbar"></div>
