Add contents for header

--- a/index.html
+++ b/index.html
@@ -50,7 +50,19 @@
                 <p>Privacy</p>
             </a>
         </div>
-        <div class="header"></div>
+        <div class="header">
+            <img src="" alt="magnify" class="magnify">
+            <input type="text">
+            <img src="" alt="bell icon" class="bell">
+            <img src="" alt="dp" class="dp">
+            <p class="myName">Utkarsh Singh</p>
+            <img src="" alt="dp" class="dp2">
+            <p class="hi">Hi there,</p>
+            <p class="username">Utkarsh Singh (@us453)</p>
+            <button class="new">New</button>
+            <button class="upload">Upload</button>
+            <button class="share">Share</button>
+        </div>
         <div class="content"></div>
         <div class="rightbar"></div>
     </div>
