Add contents for main-content part

--- a/index.html
+++ b/index.html
@@ -63,7 +63,16 @@
             <button class="upload">Upload</button>
             <button class="share">Share</button>
         </div>
-        <div class="content"></div>
+        <div class="content">
+            <p class="project">Your Projects</p>
+            <div class="box">
+                <p class="head">Super Cool Project</p>
+                <p class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <img src="" alt="fav" class="fav">
+                <img src="" alt="eye" class="eye">
+                <img src="" alt="fork" class="fork">
+            </div>
+        </div>
         <div class="rightbar"></div>
     </div>
 </body>
