Add contents for announcements

--- a/index.html
+++ b/index.html
@@ -73,7 +73,17 @@
                 <img src="" alt="fork" class="fork">
             </div>
         </div>
-        <div class="rightbar"></div>
+        <div class="rightbar">
+            <p class="ann">Announcements</p>
+            <div class="announce">
+                <p class="a1">Site Maintenance</p>
+                <p class="data1">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <p class="a2">Community Share Day</p>
+                <p class="data2">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <p class="a3">Updated Privacy Policy</p>
+                <p class="data3">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
