--- a/index.html
+++ b/index.html
@@ -76,12 +76,35 @@
         <div class="rightbar">
             <p class="ann">Announcements</p>
             <div class="announce">
-                <p class="a1">Site Maintenance</p>
-                <p class="data1">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                <p class="a2">Community Share Day</p>
-                <p class="data2">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                <p class="a3">Updated Privacy Policy</p>
-                <p class="data3">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <p class="a a1">Site Maintenance</p>
+                <p class="data data1">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <p class="a a2">Community Share Day</p>
+                <p class="data data2">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <p class="a a3">Updated Privacy Policy</p>
+                <p class="data data3">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
+            <p class="trend">Trending</p>
+            <div class="trendBox">
+                <div class="t1">
+                    <img src="" alt="pic1" class="pics pic1">
+                    <p class="top">@tegan</p>
+                    <p class="bot">World Peace Builder</p>
+                </div>
+                <div class="t2">
+                    <img src="" alt="pic2" class="pics pic2">
+                    <p class="top">@us453</p>
+                    <p class="bot">Super Cool Project</p>
+                </div>
+                <div class="t3">
+                    <img src="" alt="pic3" class="pics pic3">
+                    <p class="top">@kendall</p>
+                    <p class="bot">Life Changing App</p>
+                </div>
+                <div class="t4">
+                    <img src="" alt="pic4" class="pics pic4">
+                    <p class="top">@alex</p>
+                    <p class="bot">No Traffic Maker</p>
+                </div>
             </div>
         </div>
     </div>
