Add icons and pictures

--- a/index.html
+++ b/index.html
@@ -11,53 +11,53 @@
     <div class="container">
         <div class="sidebar">
             <a class="name">
-                <img src="" alt="logo">
+                <img src="./images/space_dashboard_FILL1_wght700_GRAD200_opsz48.svg" alt="logo">
                 <p>Dashboard</p>
             </a>
             <a class="home">
-                <img src="" alt="home Logo">
+                <img src="./images/home_FILL1_wght700_GRAD200_opsz48.svg" alt="home Logo">
                 <p>Home</p>
             </a>
             <a class="profile">
-                <img src="" alt="profile Logo">
+                <img src="./images/person_FILL1_wght700_GRAD200_opsz48.svg" alt="profile Logo">
                 <p>Profile</p>
             </a>
             <a class="msgs">
-                <img src="" alt="msg Logo">
+                <img src="./images/chat_FILL1_wght700_GRAD200_opsz48.svg" alt="msg Logo">
                 <p>Messages</p>
             </a>
             <a class="history">
-                <img src="" alt="history Logo">
+                <img src="./images/history_FILL1_wght700_GRAD200_opsz48.svg" alt="history Logo">
                 <p>History</p>
             </a>
             <a class="task">
-                <img src="" alt="task Logo">
+                <img src="./images/task_FILL1_wght700_GRAD200_opsz48.svg" alt="task Logo">
                 <p>Tasks</p>
             </a>
             <a class="comm">
-                <img src="" alt="comm logo">
+                <img src="./images/group_FILL1_wght700_GRAD200_opsz48.svg" alt="comm logo">
                 <p>Communities</p>
             </a>
             <a class="setting">
-                <img src="" alt="set logo">
+                <img src="./images/settings_FILL1_wght700_GRAD200_opsz48.svg" alt="set logo">
                 <p>Settings</p>
             </a>
             <a class="support">
-                <img src="" alt="support logo">
+                <img src="./images/contact_support_FILL1_wght700_GRAD200_opsz48.svg" alt="support logo">
                 <p>Support</p>
             </a>
             <a class="privacy">
-                <img src="" alt="privacy logo">
+                <img src="./images/verified_user_FILL1_wght700_GRAD200_opsz48.svg" alt="privacy logo">
                 <p>Privacy</p>
             </a>
         </div>
         <div class="header">
-            <img src="" alt="magnify" class="magnify">
+            <img src="./images/search_FILL1_wght700_GRAD200_opsz48.svg" alt="magnify" class="magnify">
             <input type="text">
-            <img src="" alt="bell icon" class="bell">
-            <img src="" alt="dp" class="dp">
+            <img src="./images/notifications_FILL1_wght700_GRAD200_opsz48.svg" alt="bell icon" class="bell">
+            <img src="./images/abhipsa-pal-ILra9AOaXOE-unsplash.jpg" alt="dp" class="dp bigpic">
             <p class="myName">Utkarsh Singh</p>
-            <img src="" alt="dp" class="dp2">
+            <img src="./images/abhipsa-pal-ILra9AOaXOE-unsplash.jpg" alt="dp" class="dp2 bigpic">
             <p class="hi">Hi there,</p>
             <p class="username">Utkarsh Singh (@us453)</p>
             <button class="new">New</button>
@@ -69,9 +69,9 @@
             <div class="box">
                 <p class="head">Super Cool Project</p>
                 <p class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                <img src="" alt="fav" class="fav">
-                <img src="" alt="eye" class="eye">
-                <img src="" alt="fork" class="fork">
+                <img src="./images/favorite_FILL1_wght700_GRAD200_opsz48.svg" alt="fav" class="fav">
+                <img src="./images/visibility_FILL1_wght700_GRAD200_opsz48.svg" alt="eye" class="eye">
+                <img src="./images/noun-fork-45681.svg" alt="fork" class="fork">
             </div>
         </div>
         <div class="rightbar">
@@ -87,22 +87,22 @@
             <p class="trend">Trending</p>
             <div class="trendBox">
                 <div class="t1">
-                    <img src="" alt="pic1" class="pics pic1">
+                    <img src="./images/pexels-anjana-c-674010.jpg" alt="pic1" class="pics pic1">
                     <p class="top">@tegan</p>
                     <p class="bot">World Peace Builder</p>
                 </div>
                 <div class="t2">
-                    <img src="" alt="pic2" class="pics pic2">
+                    <img src="./images/abhipsa-pal-ILra9AOaXOE-unsplash.jpg" alt="pic2" class="pics pic2">
                     <p class="top">@us453</p>
                     <p class="bot">Super Cool Project</p>
                 </div>
                 <div class="t3">
-                    <img src="" alt="pic3" class="pics pic3">
+                    <img src="./images/simon-lee-ynmPY1MLwMs-unsplash.jpg" alt="pic3" class="pics pic3">
                     <p class="top">@kendall</p>
                     <p class="bot">Life Changing App</p>
                 </div>
                 <div class="t4">
-                    <img src="" alt="pic4" class="pics pic4">
+                    <img src="./images/raimond-klavins-n-7HTOiJPso-unsplash.jpg" alt="pic4" class="pics pic4">
                     <p class="top">@alex</p>
                     <p class="bot">No Traffic Maker</p>
                 </div>
