Add all the projects

--- a/index.html
+++ b/index.html
@@ -73,6 +73,41 @@
                 <img src="./images/visibility_FILL1_wght700_GRAD200_opsz48.svg" alt="eye" class="eye">
                 <img src="./images/noun-fork-45681.svg" alt="fork" class="fork">
             </div>
+            <div class="box">
+                <p class="head">Less Cool Project</p>
+                <p class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <img src="./images/favorite_FILL1_wght700_GRAD200_opsz48.svg" alt="fav" class="fav">
+                <img src="./images/visibility_FILL1_wght700_GRAD200_opsz48.svg" alt="eye" class="eye">
+                <img src="./images/noun-fork-45681.svg" alt="fork" class="fork">
+            </div>
+            <div class="box">
+                <p class="head">Impossible App</p>
+                <p class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <img src="./images/favorite_FILL1_wght700_GRAD200_opsz48.svg" alt="fav" class="fav">
+                <img src="./images/visibility_FILL1_wght700_GRAD200_opsz48.svg" alt="eye" class="eye">
+                <img src="./images/noun-fork-45681.svg" alt="fork" class="fork">
+            </div>
+            <div class="box">
+                <p class="head">Easy Peasy App</p>
+                <p class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <img src="./images/favorite_FILL1_wght700_GRAD200_opsz48.svg" alt="fav" class="fav">
+                <img src="./images/visibility_FILL1_wght700_GRAD200_opsz48.svg" alt="eye" class="eye">
+                <img src="./images/noun-fork-45681.svg" alt="fork" class="fork">
+            </div>
+            <div class="box">
+                <p class="head">Ad Blocker</p>
+                <p class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <img src="./images/favorite_FILL1_wght700_GRAD200_opsz48.svg" alt="fav" class="fav">
+                <img src="./images/visibility_FILL1_wght700_GRAD200_opsz48.svg" alt="eye" class="eye">
+                <img src="./images/noun-fork-45681.svg" alt="fork" class="fork">
+            </div>
+            <div class="box">
+                <p class="head">Money Maker</p>
+                <p class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <img src="./images/favorite_FILL1_wght700_GRAD200_opsz48.svg" alt="fav" class="fav">
+                <img src="./images/visibility_FILL1_wght700_GRAD200_opsz48.svg" alt="eye" class="eye">
+                <img src="./images/noun-fork-45681.svg" alt="fork" class="fork">
+            </div>
         </div>
         <div class="rightbar">
             <p class="ann">Announcements</p>
