Set the position of header contents

--- a/index.html
+++ b/index.html
@@ -42,17 +42,17 @@
 
         </div>
         <div class="header">
-            <img src="./images/search_FILL1_wght700_GRAD200_opsz48.svg" alt="magnify" class="magnify">
+            <img src="./images/search_FILL1_wght700_GRAD200_opsz48.svg" alt="magnify" class="magnify frow">
             <input type="text">
-            <img src="./images/notifications_FILL1_wght700_GRAD200_opsz48.svg" alt="bell icon" class="bell">
-            <img src="./images/abhipsa-pal-ILra9AOaXOE-unsplash.jpg" alt="dp" class="dp bigpic">
-            <p class="myName">Utkarsh Singh</p>
-            <img src="./images/abhipsa-pal-ILra9AOaXOE-unsplash.jpg" alt="dp" class="dp2 bigpic">
+            <img src="./images/notifications_FILL1_wght700_GRAD200_opsz48.svg" alt="bell icon" class="bell frow">
+            <img src="./images/abhipsa-pal-ILra9AOaXOE-unsplash.jpg" alt="dp" class="dp bigpic frow">
+            <p class="myName frow">Utkarsh Singh</p>
+            <img src="./images/abhipsa-pal-ILra9AOaXOE-unsplash.jpg" alt="dp" class="dp2 bigpic frow">
             <p class="hi">Hi there,</p>
             <p class="username">Utkarsh Singh (@us453)</p>
-            <button class="new">New</button>
-            <button class="upload">Upload</button>
-            <button class="share">Share</button>
+            <button class="new frow">New</button>
+            <button class="upload frow">Upload</button>
+            <button class="share frow">Share</button>
         </div>
         <div class="content">
             <p class="project">Your Projects</p>
