Align header contents

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <input type="text">
             <img src="./images/notifications_FILL1_wght700_GRAD200_opsz48.svg" alt="bell icon" class="bell frow">
             <img src="./images/abhipsa-pal-ILra9AOaXOE-unsplash.jpg" alt="dp" class="dp bigpic frow">
-            <p class="myName frow">Utkarsh Singh</p>
+            <p class="myName">Utkarsh Singh</p>
             <img src="./images/abhipsa-pal-ILra9AOaXOE-unsplash.jpg" alt="dp" class="dp2 bigpic frow">
             <p class="hi">Hi there,</p>
             <p class="username">Utkarsh Singh (@us453)</p>
