--- a/index.html
+++ b/index.html
@@ -56,54 +56,56 @@
         </div>
         <div class="content">
             <p class="project">Your Projects</p>
-            <div class="box">
-                <p class="head">Super Cool Project</p>
-                <p class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                <img src="./images/favorite_FILL1_wght700_GRAD200_opsz48.svg" alt="fav" class="fav">
-                <img src="./images/visibility_FILL1_wght700_GRAD200_opsz48.svg" alt="eye" class="eye">
-                <img src="./images/noun-fork-45681.svg" alt="fork" class="fork">
-            </div>
-            <div class="box">
-                <p class="head">Less Cool Project</p>
-                <p class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                <img src="./images/favorite_FILL1_wght700_GRAD200_opsz48.svg" alt="fav" class="fav">
-                <img src="./images/visibility_FILL1_wght700_GRAD200_opsz48.svg" alt="eye" class="eye">
-                <img src="./images/noun-fork-45681.svg" alt="fork" class="fork">
-            </div>
-            <div class="box">
-                <p class="head">Impossible App</p>
-                <p class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                <img src="./images/favorite_FILL1_wght700_GRAD200_opsz48.svg" alt="fav" class="fav">
-                <img src="./images/visibility_FILL1_wght700_GRAD200_opsz48.svg" alt="eye" class="eye">
-                <img src="./images/noun-fork-45681.svg" alt="fork" class="fork">
-            </div>
-            <div class="box">
-                <p class="head">Easy Peasy App</p>
-                <p class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                <img src="./images/favorite_FILL1_wght700_GRAD200_opsz48.svg" alt="fav" class="fav">
-                <img src="./images/visibility_FILL1_wght700_GRAD200_opsz48.svg" alt="eye" class="eye">
-                <img src="./images/noun-fork-45681.svg" alt="fork" class="fork">
-            </div>
-            <div class="box">
-                <p class="head">Ad Blocker</p>
-                <p class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                <img src="./images/favorite_FILL1_wght700_GRAD200_opsz48.svg" alt="fav" class="fav">
-                <img src="./images/visibility_FILL1_wght700_GRAD200_opsz48.svg" alt="eye" class="eye">
-                <img src="./images/noun-fork-45681.svg" alt="fork" class="fork">
-            </div>
-            <div class="box">
-                <p class="head">Money Maker</p>
-                <p class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                <img src="./images/favorite_FILL1_wght700_GRAD200_opsz48.svg" alt="fav" class="fav">
-                <img src="./images/visibility_FILL1_wght700_GRAD200_opsz48.svg" alt="eye" class="eye">
-                <img src="./images/noun-fork-45681.svg" alt="fork" class="fork">
+            <div class="main-cont">
+                <div class="box">
+                    <p class="head">Super Cool Project</p>
+                    <p class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <img src="./images/favorite_FILL1_wght700_GRAD200_opsz48.svg" alt="fav" class="fav">
+                    <img src="./images/visibility_FILL1_wght700_GRAD200_opsz48.svg" alt="eye" class="eye">
+                    <img src="./images/noun-fork-45681.svg" alt="fork" class="fork">
+                </div>
+                <div class="box">
+                    <p class="head">Less Cool Project</p>
+                    <p class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <img src="./images/favorite_FILL1_wght700_GRAD200_opsz48.svg" alt="fav" class="fav">
+                    <img src="./images/visibility_FILL1_wght700_GRAD200_opsz48.svg" alt="eye" class="eye">
+                    <img src="./images/noun-fork-45681.svg" alt="fork" class="fork">
+                </div>
+                <div class="box">
+                    <p class="head">Impossible App</p>
+                    <p class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <img src="./images/favorite_FILL1_wght700_GRAD200_opsz48.svg" alt="fav" class="fav">
+                    <img src="./images/visibility_FILL1_wght700_GRAD200_opsz48.svg" alt="eye" class="eye">
+                    <img src="./images/noun-fork-45681.svg" alt="fork" class="fork">
+                </div>
+                <div class="box">
+                    <p class="head">Easy Peasy App</p>
+                    <p class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <img src="./images/favorite_FILL1_wght700_GRAD200_opsz48.svg" alt="fav" class="fav">
+                    <img src="./images/visibility_FILL1_wght700_GRAD200_opsz48.svg" alt="eye" class="eye">
+                    <img src="./images/noun-fork-45681.svg" alt="fork" class="fork">
+                </div>
+                <div class="box">
+                    <p class="head">Ad Blocker</p>
+                    <p class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <img src="./images/favorite_FILL1_wght700_GRAD200_opsz48.svg" alt="fav" class="fav">
+                    <img src="./images/visibility_FILL1_wght700_GRAD200_opsz48.svg" alt="eye" class="eye">
+                    <img src="./images/noun-fork-45681.svg" alt="fork" class="fork">
+                </div>
+                <div class="box">
+                    <p class="head">Money Maker</p>
+                    <p class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <img src="./images/favorite_FILL1_wght700_GRAD200_opsz48.svg" alt="fav" class="fav">
+                    <img src="./images/visibility_FILL1_wght700_GRAD200_opsz48.svg" alt="eye" class="eye">
+                    <img src="./images/noun-fork-45681.svg" alt="fork" class="fork">
+                </div>
             </div>
         </div>
         <div class="rightbar">
             <p class="ann">Announcements</p>
             <div class="announce">
                 <p class="a a1">Site Maintenance</p>
-                <p class="data data1">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <p class="data data1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
                 <p class="a a2">Community Share Day</p>
                 <p class="data data2">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 <p class="a a3">Updated Privacy Policy</p>
@@ -111,22 +113,22 @@
             </div>
             <p class="trend">Trending</p>
             <div class="trendBox">
-                <div class="t1">
+                <div class="t1 t">
                     <img src="./images/pexels-anjana-c-674010.jpg" alt="pic1" class="pics pic1">
                     <p class="top">@tegan</p>
                     <p class="bot">World Peace Builder</p>
                 </div>
-                <div class="t2">
+                <div class="t2 t">
                     <img src="./images/abhipsa-pal-ILra9AOaXOE-unsplash.jpg" alt="pic2" class="pics pic2">
                     <p class="top">@us453</p>
                     <p class="bot">Super Cool Project</p>
                 </div>
-                <div class="t3">
+                <div class="t3 t">
                     <img src="./images/simon-lee-ynmPY1MLwMs-unsplash.jpg" alt="pic3" class="pics pic3">
                     <p class="top">@kendall</p>
                     <p class="bot">Life Changing App</p>
                 </div>
-                <div class="t4">
+                <div class="t4 t">
                     <img src="./images/raimond-klavins-n-7HTOiJPso-unsplash.jpg" alt="pic4" class="pics pic4">
                     <p class="top">@alex</p>
                     <p class="bot">No Traffic Maker</p>
